# python-doniclient

./: .gitignore  .stestr.conf  CONTRIBUTING.md  README.md  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  lint.yml
doniclient/: client.py  hardware.py  inventory.py
doniclient/common/: base.py
doniclient/osc/: cli.py  common.py  device.py  plugin.py
doniclient/tests/: test_doniclient.py
doniclient/tests/osc/: common.py  fakes.py  test_device.py  test_hardware.py
doniclient/v1/: client.py  hardware.py  resource_fields.py
python_doniclient/: oscplugin.py
tests/: test_python_doniclient.py
