[tool.poetry]
name = "python-doniclient"
version = "0.1.0"
description = ""
authors = ["Michael Sherman <shermanm@uchicago.edu>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flake8 = "^3.9.0"
flake8-bugbear = "^21.4.1"
pytest-watch = "^4.2.0"
pytest-mock = "^3.5.1"
isort = "^5.8.0"
pydocstyle = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
